Добавлены папки со шрифтами и картинками, сделана шапка с кнопками регистрации и кликабельная иконка которая ведет на гитхаб...

--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <title>НАШ КРУТОЙ ПРОЕКТ</title>
-    <link rel="icon" type="image/jpeg" href="icon.jpg">
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <a href="https://google.com">Ссылка</a>
-    <br>
-    <img
-      src="https://sun9-45.userapi.com/impg/gf3JJnT8Ns89qJqU38I7pkT00W-Z1JuCs4I5PA/twrtAGKSecM.jpg?size=768x768&quality=95&sign=d539d5b8216fa4ad585fd6d69fc16889&type=album"
-      alt="КРУТАЯ ДОДО КАРТИНКА"
-      class="cool-img">
-    <img
-      src="https://sun9-68.userapi.com/s/v1/ig2/v36L2y2bRmveeZEIhFX6KEFYbFg2BlQmUpkvY47G6y67OJEuhhNngcLjdRijJrW7EuecWGxOPJTDx6Ko5TArl0UM.jpg?quality=95&as=32x32,48x48,72x72,108x108,160x160,240x240,360x360,480x480,540x540,640x640,720x720,1080x1080,1280x1280,1440x1440,1875x1875&from=bu&u=2aZ98Effj5RD4fB4OWfbeQ4Ip-Hu2qILrRsLpvUFh4Y&cs=510x510"
-      alt="ВТОРАЯ КРУТАЯ ДОДО КАРТИНКА"
-      class="menu">
-    <img
-      src="https://sun9-42.userapi.com/s/v1/ig2/ia1O_xX6akmiI6F_DKfKede-s2hiOkzhSsFFUpi601mwqbbMzh5-xkEOGtp0bysCOyfEfb9ZTw1js5bg9sce3Kr1.jpg?quality=95&as=32x32,48x48,72x72,108x108,160x160,240x240,360x360,480x480,540x540,640x640,720x720,1080x1080,1280x1280,1440x1440,1875x1875&from=bu&u=tyDxqAvv9TySDVidFP_s-8ElSv-W8dBdFjHtRKD-r0I&cs=510x510"
-      alt="КРУТОЕ ДОДО БАРБЕКЮ"
-      class="menu menu-2">
-    <br>
-    <img
-      src="https://sun9-67.userapi.com/impg/Yi0JdRhTBOJhpWCZQZa72Lkn1DIXD3YyHPFBUw/6ObaPcxs0vc.jpg?size=1080x1080&quality=95&sign=b40dee52d0ede028fa922be7ea9edc4f&type=album"
-      alt="НАША СОБАКА БАРАБАКА">
-  </body>
+<head>
+  <title>НАШ КРУТОЙ ПРОЕКТ</title> <!-- Заголовок страницы -->
+  <link rel="icon" type="image/jpeg" href="icon.jpg"> <!-- Иконка сайта -->
+  <link href="style.css" rel="stylesheet"> <!-- Подключение CSS стилей -->
+  <meta charset="utf-8"> <!-- Установка кодировки страницы -->
+</head>
+<body>
+<header>
+  <div class="header-content"> <!-- Контейнер для шапки -->
+    <a href="https://github.com/vsnitko/our-cool-project" class="github-link"> <!-- Ссылка на GitHub -->
+      <img src="images/giticon.png" alt="GitHub" class="github-icon"> <!-- Иконка GitHub -->
+    </a>
+    <h1>НАШ КРУТОЙ ПРОЕКТ</h1> <!-- Заголовок проекта -->
+    <div class="button-container"> <!-- Контейнер для кнопок -->
+      <button class="login-button">Войти</button> <!-- Кнопка входа -->
+      <button class="register-button">Регистрация</button> <!-- Кнопка регистрации -->
+    </div>
+  </div>
+</header>
+<a href="https://github.com/vsnitko/our-cool-project">Ссылка</a> <!-- Дополнительная ссылка -->
+<br>
+<img src="https://sun9-45.userapi.com/impg/gf3JJnT8Ns89qJqU38I7pkT00W-Z1JuCs4I5PA/twrtAGKSecM.jpg?size=768x768&quality=95&sign=d539d5b8216fa4ad585fd6d69fc16889&type=album"
+     alt="КРУТАЯ ДОДО КАРТИНКА" class="cool-img"> <!-- Картинка с надписью -->
+<img src="https://sun9-68.userapi.com/s/v1/ig2/v36L2y2bRmveeZEIhFX6KEFYbFg2BlQmUpkvY47G6y67OJEuhhNngcLjdRijJrW7EuecWGxOPJTDx6Ko5TArl0UM.jpg?quality=95&as=32x32,48x48,72x72,108x108,160x160,240x240,360x360,480x480,540x540,640x640,720x720,1080x1080,1280x1280,1440x1440,1875x1875&from=bu&u=2aZ98Effj5RD4fB4OWfbeQ4Ip-Hu2qILrRsLpvUFh4Y&cs=510x510"
+     alt="ВТОРАЯ КРУТАЯ ДОДО КАРТИНКА" class="menu"> <!-- Вторая картинка -->
+<img src="https://sun9-42.userapi.com/s/v1/ig2/ia1O_xX6akmiI6F_DKfKede-s2hiOkzhSsFFUpi601mwqbbMzh5-xkEOGtp0bysCOyfEfb9ZTw1js5bg9sce3Kr1.jpg?quality=95&as=32x32,48x48,72x72,108x108,160x160,240x240,360x360,480x480,540x540,640x640,720x720,1080x1080,1280x1280,1440x1440,1875x1875&from=bu&u=tyDxqAvv9TySDVidFP_s-8ElSv-W8dBdFjHtRKD-r0I&cs=510x510"
+     alt="КРУТОЕ ДОДО БАРБЕКЮ" class="menu menu-2"> <!-- Третья картинка -->
+<br>
+<img src="https://sun9-67.userapi.com/impg/Yi0JdRhTBOJhpWCZQZa72Lkn1DIXD3YyHPFBUw/6ObaPcxs0vc.jpg?size=1080x1080&quality=95&sign=b40dee52d0ede028fa922be7ea9edc4f&type=album"
+     alt="НАША СОБАКА БАРАБАКА"> <!-- Четвертая картинка -->
+</body>
 </html>
+
